fixed layout problems of navbar

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 
 .header {
   height: 70px;
-  box-shadow: 0 3 6 rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
   width: 100%;
 }
 .header .container {
@@ -22,7 +22,6 @@
   text-align: left;
   position: relative;
   left: 25px;
-  top: 17px;
   margin: 17px;
   opacity: 1;
 }
@@ -43,13 +42,12 @@
 }
 .header .navbar-content:hover {
   color: #000000;
-  border-color: #08A6E4;
 }
 .header .navbar-list {
   list-style-type: none;
   padding: 0;
   position: absolute;
-  left: 0;
+  left: 25px;
   top: 95px;
   flex-direction: column;
   background-color: white;
@@ -82,6 +80,10 @@
     left: -9999px;
     opacity: 0;
   }
+}
+.header .menu-btn {
+  position: relative;
+  right: 25px;
 }
 @media screen and (min-width: 800px) {
   .header .menu-btn {
