--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,7 +2,7 @@
 
 .header {
     height: 70px;
-    box-shadow: 0 3 6 map-get($colors, "secondary-shadow");
+    box-shadow: 0px 3px 6px map-get($colors, "secondary-shadow");
     width: 100%;
 
     .container {
@@ -19,7 +19,8 @@
         text-align: left;
         position: relative;
         left: 25px;
-        top: 17px;
+        // top: 17px;
+        // bottom: 17px;
         margin: 17px;
         opacity: 1;
     }
@@ -43,7 +44,6 @@
         letter-spacing: 0.1875rem;
          &:hover {
             color: map-get($colors, "black");
-            border-color: map-get($colors, "primary");
          }
     }
 
@@ -51,7 +51,7 @@
         list-style-type: none;
         padding: 0;
         position: absolute;
-        left: 0;
+        left: 25px;
         top: 95px;
         flex-direction: column;
         background-color: white;
@@ -94,6 +94,9 @@
             opacity: 0;
         }
         &-btn {
+            position: relative;
+            right: 25px;
+
             @include lg {
                 display: none;
             }
